bugfix getAll - sort algorithm
